--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,13 +36,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">RoboVM</a>
+          <a class="brand" href="index.html">RoboVM</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li {% if section == 'front' %} class="active" {% endif %}><a href="#about">Docs</a></li>
-              <li {% if section == 'contribute' %} class="active" {% endif %}><a href="#contribute">Contribute</a></li>
-              <li {% if section == 'contact' %} class="active" {% endif %}><a href="#contact">Contact</a></li>
-              <li><a href="#contact">GitHub Project</a></li>
+              <li {% if section == 'docs' %} class="active" {% endif %}><a href="docs.html">Docs</a></li>
+              <li {% if section == 'contribute' %} class="active" {% endif %}><a href="contribute.html">Contribute</a></li>
+              <li {% if section == 'contact' %} class="active" {% endif %}><a href="contact.html">Contact</a></li>
+              <li><a href="https://github.com/robovm">GitHub Project</a></li>
             </ul>
           </div>
         </div>
