--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,9 +39,9 @@
           <a class="brand" href="index.html">RoboVM</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li {% if section == 'docs' %} class="active" {% endif %}><a href="docs.html">Docs</a></li>
-              <li {% if section == 'contribute' %} class="active" {% endif %}><a href="contribute.html">Contribute</a></li>
-              <li {% if section == 'contact' %} class="active" {% endif %}><a href="contact.html">Contact</a></li>
+              <li {% if page.section == 'docs' %} class="active" {% endif %}><a href="docs.html">Docs</a></li>
+              <li {% if page.section == 'contribute' %} class="active" {% endif %}><a href="contribute.html">Contribute</a></li>
+              <li {% if page.section == 'contact' %} class="active" {% endif %}><a href="contact.html">Contact</a></li>
               <li><a href="https://github.com/robovm">GitHub Project</a></li>
             </ul>
           </div>
