--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery-1.8.2.min.js"></script>
     <script src="js/bootstrap.js"></script>
-    <script src="js/highligt/highlight.pack.js"></script>
+    <script src="js/highlight/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 
     <script type="text/javascript">
