--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
     <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png"> -->
   </head>
 
-  <body>
+  <body onload="hljs.initHighlighting()">
 
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
@@ -59,7 +59,6 @@
     <script src="js/jquery-1.8.2.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/highlight/highlight.pack.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
