--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/robovm.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="js/highlight/styles/default.css" rel="stylesheet">
+    <!-- <link href="js/highlight/styles/default.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="http://yandex.st/highlightjs/7.3/styles/default.min.css">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -58,7 +59,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery-1.8.2.min.js"></script>
     <script src="js/bootstrap.js"></script>
-    <script src="js/highlight/highlight.pack.js"></script>
+    <!-- <script src="js/highlight/highlight.pack.js"></script> -->
+    <script src="http://yandex.st/highlightjs/7.3/highlight.min.js"></script>
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
