--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png"> -->
   </head>
 
-  <body onload="hljs.initHighlighting()">
+  <body>
 
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
@@ -61,6 +61,7 @@
     <script src="js/bootstrap.js"></script>
     <!-- <script src="js/highlight/highlight.pack.js"></script> -->
     <script src="http://yandex.st/highlightjs/7.3/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
