--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,9 @@
 
     <!-- Le styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/prettify.css" rel="stylesheet">
     <link href="css/robovm.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
-    <!-- <link href="js/highlight/styles/default.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="http://yandex.st/highlightjs/7.3/styles/default.min.css">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -27,7 +26,7 @@
     <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png"> -->
   </head>
 
-  <body>
+  <body onload="prettyPrint()">
 
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
@@ -59,9 +58,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery-1.8.2.min.js"></script>
     <script src="js/bootstrap.js"></script>
-    <!-- <script src="js/highlight/highlight.pack.js"></script> -->
-    <script src="http://yandex.st/highlightjs/7.3/highlight.min.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
+    <script src="js/prettify.js"></script>
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
