--- a/css/robovm.css
+++ b/css/robovm.css
@@ -26,6 +26,9 @@ body {
     font-weight: bold;
     padding: 20px 25px;
 }
+.hero-unit a {
+    font-size: 15px;
+}
 .hero-unit pre {
     padding: 15px;
     border: none;
