--- a/css/robovm.css
+++ b/css/robovm.css
@@ -1,5 +1,5 @@
 body {
-    background: url(../img/bg.png);
+    /* background: url(../img/bg.png); */
     padding-top: 60px;
     padding-bottom: 40px;
 }
