--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,6 +59,7 @@
     <script src="js/jquery-1.8.2.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/prettify.js"></script>
+    <script src="js/ZeroClipboard.min.js"></script>
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
