--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
 
     <script src="js/jquery-1.8.2.min.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrapx-clickover.js"></script>
     <script src="js/prettify.js"></script>
     <script src="js/ZeroClipboard.min.js"></script>
 
