--- a/css/robovm.css
+++ b/css/robovm.css
@@ -58,6 +58,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
     line-height: 20px;
     width: 400px;
 }
+.hero-unit .popover .popover-title {
+    display: none;
+}
 .hero-unit .popover .update-site-url {
     border: 1px solid #cccccc;
     font-size: 14px;
