--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,8 @@
 
   <body onload="prettyPrint()">
 
+    <a href="https://github.com/robovm/robovm"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
+
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -48,7 +50,7 @@
               <li {% if page.section == 'docs' %} class="active" {% endif %}><a href="docs.html">Docs</a></li>
               <li {% if page.section == 'contribute' %} class="active" {% endif %}><a href="contribute.html">Contribute</a></li>
               <li {% if page.section == 'contact' %} class="active" {% endif %}><a href="contact.html">Contact</a></li>
-              <li><a href="https://github.com/robovm">GitHub Project</a></li>
+              <li><a href="https://github.com/robovm/robovm">GitHub Project</a></li>
             </ul>
           </div>
         </div>
@@ -56,8 +58,6 @@
     </div>
 
     {{ content }}
-
-<a href="https://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
 
     <footer>
       <p>&copy; Trillian AB 2012</p>
