--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,10 +53,9 @@
           </div>
         </div>
       </div>
-
-      <a href="https://github.com/robovm/robovm" style="position: absolute; top: 0; right: 0; border: 0;"><img src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
-
     </div>
+
+    <a href="https://github.com/robovm/robovm" style="position: absolute; right: 0;"><img src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
 
     {{ content }}
 
