--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,8 @@
 
   <body onload="prettyPrint()">
 
+    <a  style="position: absolute; top: 0; left: 0; z-index: 10000;" href="https://github.com/robovm/robovm"><img style="border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_orange_ff7600.png" alt="Fork me on GitHub"></a>
+
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -54,8 +56,6 @@
         </div>
       </div>
     </div>
-
-    <a href="https://github.com/robovm/robovm" style="position: absolute; right: 0;"><img src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
 
     {{ content }}
 
