--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,8 @@
 
   <body onload="prettyPrint()">
 
-    <a  style="position: absolute; top: 0; left: 0; z-index: 10000;" href="https://github.com/robovm/robovm"><img style="border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_orange_ff7600.png" alt="Fork me on GitHub"></a>
+    <img style="position: fixed; top: 0; left: 0; z-index: 10000;border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_orange_ff7600.png" alt="Fork me on GitHub">
+    <a style="position: fixed; top: 0; left: 0; z-index: 10001; width: 20px; height: 20px; display: block;" href="https://github.com/robovm/robovm">&nbsp;</a>
 
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
