--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
+          <div class="brand-spacer">&nbsp;</div>
           <a class="brand" href="index.html">RoboVM</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
