--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,13 +39,14 @@
 
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
+        <div class="brand-spacer">&nbsp;</div>
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html"><div class="brand-spacer">&nbsp;</div>RoboVM</a>
+          <a class="brand" href="index.html">RoboVM</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li {% if page.section == 'docs' %} class="active" {% endif %}><a href="docs.html">Docs</a></li>
