--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,12 +34,11 @@
 
   <body onload="prettyPrint()">
 
-    <img style="position: fixed; top: 0; left: 0; z-index: 10000;border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_orange_ff7600.png" alt="Fork me on GitHub">
-    <a style="position: fixed; top: 0; left: 0; z-index: 10001; width: 100px; height: 85px; display: block;" href="https://github.com/robovm/robovm">&nbsp;</a>
+    <img style="position: fixed; top: 0; right: 0; z-index: 10000;border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub">
+    <a style="position: fixed; top: 40px; right: 100px; z-index: 10001; width: 100px; height: 45px; display: block;" href="https://github.com/robovm/robovm">&nbsp;</a>
 
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
-        <div class="brand-spacer">&nbsp;</div>
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
