--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,7 @@
 
   <body onload="prettyPrint()">
 
-    <img style="position: fixed; top: 0; right: 0; z-index: 10000;border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub">
-    <a style="position: fixed; top: 40px; right: 100px; z-index: 10001; width: 100px; height: 45px; display: block;" href="https://github.com/robovm/robovm">&nbsp;</a>
+    <a id="forkme" style="position: fixed; top: 0px; right: 0px; z-index: 10001;" href="https://github.com/robovm/robovm"><img style="border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
 
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
