--- a/css/robovm.css
+++ b/css/robovm.css
@@ -81,6 +81,12 @@ footer {
   text-align: center;
 } 
 
+@media (max-width: 979px) {
+  #forkme {
+    display: none;
+  }
+}
+
 /* Sidenav for Docs
 -------------------------------------------------- */
 
