--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,6 +75,11 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $('.nav').affix();
+      });
+    </script>
 
   </body>
 </html>
