--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,8 @@
     </script>
     <script type="text/javascript">
       $(document).ready(function() {
-        $('.nav').affix({offset: { y: 100 }});
+        $('.nav').affix();
+        $('.nav').scrollspy();
       });
     </script>
 
