--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
     <script type="text/javascript">
       $(document).ready(function() {
         $('.nav').affix();
-        $('.nav').scrollspy();
+        $('.bs-docs-sidebar').scrollspy();
       });
     </script>
 
