--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@
     </script>
     <script type="text/javascript">
       $(document).ready(function() {
-        $('.nav').affix();
+        //$('.nav').affix();
         $('.bs-docs-sidebar').scrollspy();
       });
     </script>
