--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,6 +79,9 @@
       $(document).ready(function() {
         $('.nav').affix();
         $('body').scrollspy();
+        $('[data-spy="scroll"]').each(function () {
+          var $spy = $(this).scrollspy('refresh');
+        });
       });
     </script>
 
