--- a/css/robovm.css
+++ b/css/robovm.css
@@ -1,10 +1,10 @@
-body {
+bbbody {
     /* background: url(../img/bg.png); */
     padding-top: 60px;
     padding-bottom: 40px;
 }
 
-section {
+sssection {
   margin-bottom: 60px;
 }
 
