--- a/css/robovm.css
+++ b/css/robovm.css
@@ -86,6 +86,12 @@ footer {
   }
 }
 
+@media (max-width: 979px) {
+  .navbar-inverse .nav-collapse .nav > li > a, .navbar-inverse .nav-collapse .dropdown-menu a {
+    color: white;
+  }
+}
+
 /* Sidenav for Docs
 -------------------------------------------------- */
 
