--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
             <ul class="nav">
               <li {% if page.section == 'docs' %} class="active" {% endif %}><a href="docs.html">Docs</a></li>
               <li {% if page.section == 'contribute' %} class="active" {% endif %}><a href="contribute.html">Contribute</a></li>
-              <li {% if page.section == 'support' %} class="active" {% endif %}><a href="support.html">Contact</a></li>
+              <li {% if page.section == 'support' %} class="active" {% endif %}><a href="support.html">Support</a></li>
               <li><a href="https://github.com/robovm/robovm">GitHub Project</a></li>
             </ul>
           </div>
