--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,11 @@
       </div>
     </div>
 
+    <div class="alert alert-error">
+      <strong>Warning!</strong> RoboVM is pre-alpha software. It's not ready for production use. 
+      Expect to be bitten by bugs. If you do find a bug, please <a href="contribute.html#report-a-bug">report it</a>.
+    </div>
+
     {{ content }}
 
     <footer>
