--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta property="fb:page_id" content="211150942355161" />
 
     <!-- Le styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
