--- a/css/robovm.css
+++ b/css/robovm.css
@@ -86,6 +86,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
     line-height: 27px;
 }
 
+.alert code {
+    border: none;
+    padding: 0;
+    background: transparent;
+    color: #333;
+}
+
 footer {
   margin-top: 50px;
   text-align: center;
