--- a/css/robovm.css
+++ b/css/robovm.css
@@ -99,6 +99,9 @@ pre.prettyprint {
     border: 1px solid #CCC;
     border: 1px solid rgba(0, 0, 0, 0.15);
 }
+pre {
+    overflow: scroll;
+}
 footer {
   margin-top: 50px;
   text-align: center;
