--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,7 +83,7 @@
     </script>
     <script type="text/javascript">
       $(document).ready(function() {
-        $('.nav').affix();
+        $('.bs-docs-sidenav').affix();
         $('body').scrollspy();
         $('[data-spy="scroll"]').each(function () {
           var $spy = $(this).scrollspy('refresh');
