--- a/css/robovm.css
+++ b/css/robovm.css
@@ -143,10 +143,15 @@ footer {
   padding: 8px 14px;
   border: 1px solid #e5e5e5;
 }
+.bs-docs-sidenav > li > ul.nav.nav-list {
+  padding-left: 0;
+  padding-right: 0;
+}
 .bs-docs-sidenav > li > ul.nav.nav-list > li > a {
   margin: 0 0 -1px;
-  padding: 8px 14px;
+  padding: 8px 30px;
   border: 1px solid #e5e5e5;
+  font-size: 80%;
 }
 .bs-docs-sidenav > li:first-child > a {
   -webkit-border-radius: 6px 6px 0 0;
