--- a/css/robovm.css
+++ b/css/robovm.css
@@ -148,9 +148,9 @@ footer {
   padding-right: 0;
 }
 .bs-docs-sidenav > li > ul.nav.nav-list > li > a {
-  width: 190px;
+  width: 179px;
   margin: 0 0 -1px;
-  padding: 8px 30px;
+  padding: 8px 14px 8px 25px;
   border: 1px solid #e5e5e5;
   font-size: 13px;
 }
