--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,7 @@
               <li {% if page.section == 'docs' %} class="active" {% endif %}><a href="docs.html">Docs</a></li>
               <li {% if page.section == 'contribute' %} class="active" {% endif %}><a href="contribute.html">Contribute</a></li>
               <li {% if page.section == 'support' %} class="active" {% endif %}><a href="support.html">Support</a></li>
+              <li {% if page.section == 'license' %} class="active" {% endif %}><a href="license.html">License</a></li>
               <li><a href="https://github.com/robovm/robovm">GitHub Project</a></li>
             </ul>
           </div>
