--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     <!-- Le styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/prettify.css" rel="stylesheet">
+    <link href="css/ticker-style.css" rel="stylesheet" type="text/css" />
     <link href="css/robovm.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
 
