--- a/css/robovm.css
+++ b/css/robovm.css
@@ -236,6 +236,9 @@ footer {
   }
 }
 
+.news-ticker {
+  position: relative;
+}
 .ticker, .ticker-wrapper, .ticker-wrapper.has-js, .ticker-title, .ticker-content, .ticker-swipe {
   font-size: 11px;
   background-color: transparent;  
