--- a/css/robovm.css
+++ b/css/robovm.css
@@ -237,7 +237,7 @@ footer {
 }
 
 #news-ticker {
-  font-size: 10px;
+  font-size: 11px;
   width: 100%;
   text-align: right;
 }
@@ -246,8 +246,9 @@ footer {
   padding-right: 10px;
 }
 .news-ticker-content {
+  text-align: left;
   display: inline-block;
-  width: 200px;
+  width: 150px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
