--- a/css/robovm.css
+++ b/css/robovm.css
@@ -240,6 +240,9 @@ footer {
   font-size: 11px;
   width: 100%;
   text-align: right;
+  line-height: normal;
+  padding: 0px;
+  margin: 0px;
 }
 .news-ticker-title {
   font-weight: bold;
