--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>RoboVM - Develop iPhone and iPad Apps in Java with RoboVM</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="RoboVM makes it possible to develop native iOS apps that use the CocoaTouch APIs in Java. It comprises a bytecode ahead-of-time compiler and runtime library based on Android. RoboVM is 100% open source." />
     <meta name="author" content="">
     <meta property="fb:page_id" content="211150942355161" />
 
