--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,11 @@
     <meta name="description" content="RoboVM makes it possible to develop native iOS apps that use the CocoaTouch APIs in Java. It comprises a bytecode ahead-of-time compiler and runtime library based on Android. RoboVM is 100% open source." />
     <meta name="author" content="">
     <meta property="fb:page_id" content="211150942355161" />
+    <meta property="og:title" content="RoboVM - Develop iPhone and iPad Apps in Java with RoboVM"/>
+    <meta property="og:description" content="RoboVM makes it possible to develop native iOS apps that use the CocoaTouch APIs in Java. It comprises a bytecode ahead-of-time compiler and runtime library based on Android. RoboVM is 100% open source."/>
+    <meta property="og:image" content="img/logo-share.png"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:site_name" content="RoboVM"/>
 
     <!-- Le styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
