--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
     <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png"> -->
   </head>
 
-  <body onload="prettyPrint()">
+  <body onload="prettyPrint()" itemscope itemtype="http://schema.org/Article">
 
     <a id="forkme" style="position: fixed; top: 0px; right: 0px; z-index: 10001;" href="https://github.com/robovm/robovm"><img style="border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
 
