--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
     <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png"> -->
   </head>
 
-  <body onload="prettyPrint()" itemscope itemtype="http://schema.org/Article">
+  <body onload="prettyPrint()">
 
     <a id="forkme" style="position: fixed; top: 0px; right: 0px; z-index: 10001;" href="https://github.com/robovm/robovm"><img style="border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
 
@@ -66,7 +66,7 @@
     </div>
 
     <div class="alert" style="text-align: center;">
-      <strong>Warning!</strong> RoboVM is pre-alpha software. It's not yet ready for production use. 
+      <strong>Warning!!!/strong> RoboVM is pre-alpha software. It's not yet ready for production use. 
       Expect to be bitten by bugs. If you find a bug, please <a href="contribute.html#report-a-bug">report it</a>.
     </div>
 
