--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@
     </div>
 
     <div class="alert" style="text-align: center;">
-      <strong>Warning!</strong> RoboVM is pre-alpha software. It's not yet ready for production use. 
+      <strong>Warning!</strong> RoboVM is alpha software. It's not yet ready for production use. 
       Expect to be bitten by bugs. If you find a bug, please <a href="contribute.html#report-a-bug">report it</a>.
     </div>
 
