--- a/css/robovm.css
+++ b/css/robovm.css
@@ -262,3 +262,11 @@ footer {
 #like-fb iframe {
   margin-top: -3px;
 }
+
+.hero-unit .beta-signup {
+    margin-top: 35px;
+    font-size: 15px;
+}
+.hero-unit .beta-signup strong {
+    font-size: 17px;
+}
