--- a/css/robovm.css
+++ b/css/robovm.css
@@ -264,9 +264,10 @@ footer {
 }
 
 .hero-unit .beta-signup {
+    float: right;
     margin-top: 35px;
     font-size: 15px;
 }
 .hero-unit .beta-signup strong {
-    font-size: 17px;
+    font-size: 18px;
 }
