--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
     {{ content }}
 
     <footer>
-      <p>&copy; Trillian AB 2013</p>
+      <p>&copy; Trillian AB 2013<br/><small>Trillian AB, Arvid Hedvalls Backe 4, SE-411 33 Göteborg, Sweden</small></p>
     </footer>
 
     <script type="text/javascript">
